Back out variable additions for now, fix whitespace.

--- a/scss/_custom-variables.scss
+++ b/scss/_custom-variables.scss
@@ -228,12 +228,8 @@ $spacers: map-merge(
 $badge-pill-radius: .25rem;
 
 // >> Breadcrumbs
-$breadcrumb-font-size: small;
-$breadcrumb-width: fit-content;
-$breadcrumb-padding-y: 2px;
-$breadcrumb-padding-x: 10px;
-$breadcrumb-margin-bottom: 5px;
 $breadcrumb-color: $azurite;
+$breadcrumb-bg: $gray-200;
 
 // >> Buttons
 $btn-font-weight: 500;
